--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Heman Chongbang Limbu</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="www.google.com" class="github"><i class="bx bxl-github"></i></a>
-          <a href="www.linkedin.com/in/hemanlimbu-2584681a3" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.github.com/chon3806" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/hemanlimbu-2584681a3" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -348,12 +346,7 @@
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
-              <div class="my-3">
-                <div class="loading">Loading...</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button class="btn btn-primary" type="submit">Send Message</button></div>
             </form>
           </div>
 
