--- a/inner-page.html
+++ b/inner-page.html
@@ -43,16 +43,19 @@
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="github"><i class="bx bxl-github"></i></a>
-          <a href="www.linkedin.com/in/hemanlimbu-2584681a3" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="www.linkedin.com/in/hemanlimbu" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i>
+              <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-
+          <li><a href="assets/img/HemanChongbangLimbu_RESUME.pdf" download="HemanChongbangLimbu_RESUME"><img
+                src="assets/img/downloadResume.jpg" alt="resume" width="40" height="40"></a></li>
+          <li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav>
