--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                              <div class="col-lg-6">
                                  <ul>
                                      <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong>
-                                         <span><a href="+14692356905">(469) 235-6905</a></span></li>
+                                         <span><a href="tel:469-235-6905">(469) 235-6905</a></span></li>
                                      <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
                                          <span><a
-                                                 href="https://hemanchongbanglimbu@gmail.com">hemanchongbanglimbu@gmail.com</a></span>
+                                                 href="mailto:hemanchongbanglimbu@gmail.com">hemanchongbanglimbu@gmail.com</a></span>
                                      </li>
                                      <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span> <a
                                                  href="https://goo.gl/maps/iYKSMjzGCXhEV2x28">3806 William Dehaes Drive,
@@ -236,10 +236,10 @@
                                      help
                                      launch career while achieving company goals. </em></p>
                              <ul>
-                                 <li><a href="https://goo.gl/maps/iYKSMjzGCXhEV2x28">3806 William Dehaes Drive,
-                                         Irving, TX 75038</a></li>
-                                 <li><a href="+14692356905">(469)235-6905</a></li>
-                                 <li><a href="https://hemanchongbanglimbu@gmail.com">hemanchongbanglimbu@gmail.com</a>
+                                 <li>3806 William Dehaes Drive,
+                                     Irving, TX 75038</li>
+                                 <li>(469)235-6905</li>
+                                 <li>hemanchongbanglimbu@gmail.com
                                  </li>
                              </ul>
                          </div>
@@ -360,21 +360,24 @@
                      <div class="col-lg-5 d-flex align-items-stretch">
                          <div class="info">
                              <div class="address">
-                                 <i class="bi bi-geo-alt"></i>
-                                 <h4>Location:</h4>
-                                 <p>3806 William Dehaes Drive, Irving, TX 75038</p>
+                                 <a href="https://goo.gl/maps/iYKSMjzGCXhEV2x28"><i class=" bi bi-geo-alt"></i>
+                                     <h4>Location:</h4>
+                                     <p>3806 William Dehaes Drive, Irving, TX 75038</p>
+                                 </a>
                              </div>
 
                              <div class="email">
-                                 <i class="bi bi-envelope"></i>
-                                 <h4>Email:</h4>
-                                 <p>hemanchongbanglimbu@gmail.com</p>
+                                 <a href="mailto:hemanchongbanglimbu@gmail.com"><i class="bi bi-envelope"></i>
+                                     <h4>Email:</h4>
+                                     <p>hemanchongbanglimbu@gmail.com</p>
+                                 </a>
                              </div>
 
                              <div class="phone">
-                                 <i class="bi bi-phone"></i>
-                                 <h4>Call:</h4>
-                                 <p>(469) 235-6905</p>
+                                 <a href="tel:469-235-6905"><i class="bi bi-phone"></i>
+                                     <h4>Call:</h4>
+                                     <p>(469) 235-6905</p>
+                                 </a>
                              </div>
 
                              <iframe
@@ -439,4 +442,5 @@
      <script src="assets/js/main.js"></script>
 
  </body>
+
  </html>
